hot-fix(416px-stuck): Fixed a bug where the CSS wouldn't resize the .pricing on low-res, starting from 416px

--- a/style.css
+++ b/style.css
@@ -112,3 +112,9 @@ body {
     row-gap: 40px;
   }
 }
+
+@media screen and (max-width: 416px) {
+  .pricing {
+    width: 90%;
+  }
+}
